# CMakeLists-Learning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.cache/clangd/index/: gun.cpp.3965B8D62D0998D0.idx  gun.h.68909E8708A0F7CF.idx  main.cpp.D764D1107620D758.idx  solider.cpp.0D8720E0B35ED28D.idx  solider.h.AD09FBA6F29A314B.idx
include/: gun.h  solider.h
src/: gun.cpp  solider.cpp
